	PR optimization/11059 	* expr.c (can_store_by_pieces): Return true if length is zero. 	(store_by_pieces): If length is zero and endp is two, abort, 	othwerise, if length is zero and endp is not two, return "to". 	(clear_by_pieces): Do nothing if length is zero. 	(clear_storage): Do nothing if length is zero. 	(store_constructor): Simplify code when size is zero, or the 	target has already been cleared.  This avoids emitting a 	blockage instruction when initializing empty structures.

* g++.dg/opt/emptyunion.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@69049 138bc75d-0d04-0410-961f-82ee72b054a4